PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Add RequiresDisplay test profile property to indicate if the test profile explicitly requires a monitor / display server to work

Phoronix Test Suite 8.2.0 Milestone 4
7 September 2018

pts-core: Fix behavior of "Would you like to stop and install these tests now"
pts-core: Add reinstall / re-install aliases to force-install
ob_auto_compare: Default first to trying to do an automated local result comparison
phodevi: Amlogic SoC detection based on meson_cpufreq driver
phodevi: Rockchip SoC fallback detection
phodevi: Embedded ARM Cortex / ARM part model detection
phodevi: Expanded sensor coverage using Intel RAPL

Phoronix Test Suite 8.2.0 Milestone 3
22 August 2018

pts-core: Minor updates to logic for determining how many times to dynamically increase run count on high variance results
pts-core: Show deprecated tests too when running list-all-tests
pts-core: Add DropNoisyResults option if wishing to not save results that have too high of deviation between runs
pts-core: Add PTS_DOWNLOAD_CACHE_OVERRIDE environment variable option on make-download-cache
pts-core: Add PTS_USER_PATH_OVERRIDE environment variable to override PTS_USER_PATH on initialization
pts-core: Add PTS_DOWNLOAD_CACHING_PLATFORM_LIMIT environment variable for make-download-cache
pts-core: Add list-cached-tests option

Phoronix Test Suite 8.2.0 Milestone 2
15 August 2018

pts-core: Add DivideResultDivisor to result parser
pts-core: Add libevent as possible external dependency
pts-core: Alert the user when the test install directory is on a file-system mounted with 'noexec'
pts-core: Optional support with PHP 7.3+ to also obtain network info using net_get_interfaces()
pts-core: Fix possible alignment issue with value/spacer on outputting text-based result graphs
pts-core: When Internet is not available and running list-tests, only show tests that are available via caches unless `list-all-tests` is run